--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,14 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+/* general styles*/
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* generic project styles */
+    color: #3a3a3a;
+}
 
 /*header*/
 header {
@@ -13,6 +20,8 @@ header {
 /*main content*/
 main {
     background-color: lightblue;
+    /* make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
 }
 /*footer*/
 footer {
