make header fixed and width 100% and added box-shadow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,13 @@ h1 {
 
 /*header*/
 header {
-    background-color: lightcoral
+    background-color: #ffffff;
+    padding: 0 1rem;
+    position: fixed;
+    /*z-index högt värde så den hamnar högst upp ifall vi lägger till mera z-index.*/
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 /*main content*/
 main {
