--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,17 @@ h1 {
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
+/* navbar styles with dropdown toggle / navbar hamnar utanför headern med position: absolute*/
+nav {
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+}
 /*main content*/
 main {
     background-color: lightblue;
