push down the main content so its viewable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,8 @@ main {
     background-color: lightblue;
     /* make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
+    /* make the text push down so its viewable*/
+    margin-top: 47px;
 }
 /*footer*/
 footer {
