--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,3 +131,10 @@ footer {
         margin-top: 79px;
     }
 }
+/* larger screens than 992px*/
+@media screen and (min-width: 992px) {
+    /*to get a border at the bottom when hovering over links*/
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;        
+    }
+}
