created hidden style and added it to the meetup header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ h1, h2, h3 {
     color: #252525
 }
 
+/* class for hiding header*/
+.hidden-heading {
+    display: none;
+}
 /*header*/
 header {
     background-color: #ffffff;
