--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,10 +90,13 @@ nav {
 }
 /*main content*/
 main {
-    /* make main element take up any surplus space to push footer down */
-    flex: 1 0 auto;
-    /* make the text push down so its viewable*/
-    margin-top: 47px;
+     /* Enlarge main element to push footer down*/
+     flex: 1 0 auto;
+     /* Add margin at the top to prevent content from being covered by the header */
+     margin-top: 47px;
+     /* Enable flex properties for child elements */
+     display: flex;
+     flex-direction: column;
 }
 
 /*hero section*/
@@ -198,6 +201,51 @@ main {
     line-height: 0;
 }
 
+/* signup page*/
+#signup {
+    background-image: url("../images/signup-image.webp");
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6)
+    padding: 30px;
+}
+
+#signup-form > h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+}
 /*footer*/
 #social-networks {
     text-align: center;
@@ -281,6 +329,29 @@ main {
     #photos {
         column-count: 3;
     }
+
+    /* form page*/
+    #signup {
+        background-position: center;
+        position: relative;
+    }
+
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
+
 }
 /* larger screens than 992px*/
 @media screen and (min-width: 992px) {
