--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,16 +210,19 @@ main {
     flex-grow: 1;
 }
 
+
 #signup-form {
     color: #ffffff;
-    background-color: rgba(60, 60, 60, 0.6)
+    background-color: rgba(60, 60, 60, 0.6);
     padding: 30px;
 }
 
-#signup-form > h2 {
+
+#signup-form>h2 {
     color: #fafafa;
     margin-bottom: 20px;
 }
+
 
 .text-input {
     background: transparent;
@@ -232,11 +235,13 @@ main {
     padding: 0 5px;
 }
 
+
 .radio-buttons {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
+
 
 .join-button {
     margin-top: 20px;
@@ -246,6 +251,7 @@ main {
     background-color: #454b1b;
     color: #fafafa;
 }
+
 /*footer*/
 #social-networks {
     text-align: center;
